--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/pipook/sessionsAngularJs/issues"
   },
-  "homepage": "https://github.com/pipook/sessionsAngularJs#readme"
+  "homepage": "https://github.com/pipook/sessionsAngularJs#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0"
+  }
 }
