--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
   "homepage": "https://github.com/pipook/sessionsAngularJs#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0"
+    "gulp-connect": "^5.0.0",
+    "gulp-inject": "^4.1.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-stylus": "^2.6.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "nib": "^1.1.2"
   }
 }
